# events-bot

./: docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/app/: main.py
src/berlin_events_tracker/: comparator.py  fetcher.py  main.py  notifier.py  parser.py  search_results2  storage.py
src/data/: diff_events.json  past_events.json  yesterday_events.json
